[workspace]
members = [
    "alacritty",
    "alacritty_terminal",
    "alacritty_config",
    "alacritty_config_derive",
]
resolver = "2"

[profile.release]
lto = "thin"
debug = 1
incremental = false

[patch.crates-io]
vte = { git = "https://github.com/t184256/vte.git" }  # Alt / CancelAlt
utf8parse = { git = "https://github.com/t184256/vte.git" }  # sigh
